<resources>
    <string name="app_name">Validations</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="full_name">Full Name</string>
    <string name="validation_s">Validation\'s</string>
    <string name="mobile">Mobile No.</string>
    <string name="create_password">Create Password</string>
    <string name="state">State</string>
    <string name="town_pincode">Town PinCode</string>
    <string name="validate">Validate</string>


</resources>
